# GAdmin

./: .clangd  .gitattributes  .gitignore  AutoUpdate.xml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  GAdmin-Release.lua  LIBRARIES  README.md  build.sh  gadmin.lua  nickname-colors.conf  nickname-colors.json  user-themes.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: push.yml  release.yml
base/: Debug.lua  Release.lua
cmake/: compile_flags.cmake  compile_info.cmake  fetch_content.cmake  libraries.cmake
cmake/options/: use_embedded_message_pack.cmake  use_upx.cmake
dtd/: Theme.dtd
embed/: autocompletion.json  configuration.json  gps.json  main_frame_settings.json  server_information.json
embed/plugin_information/: end.md  start.md
include/common/: common.h  network.h
include/loader/: loader.h
include/plugin/: common_utils.h  configuration.h  encoding.h  exception_handler.h  filesystem.h  loader.h  log.h  memory.h  network.h  plugin.h  signatures.h  string_utils.h  utils.h
include/plugin/cheats/: airbreak.h  base.h  clickwarp.h  tracers.h  (+2 more)
include/raknet/: bit_stream.h  rak_client.h
include/resources/: main.json
include/update_handler/: loader.h
lib/gadmin/: gnome-icons.lua  rkeys_modif.lua
nsis/: main.nsi  pre-build.sh  utils.nsi
src/: Algorithm.clue  Assets.clue  AutoUpdate.clue  CommandRequester.clue  Common.clue  CompressedData.clue  Config.clue  DebugCommands.clue  EncodingCompatibility.clue  Hook.clue  Icons.clue  Main.clue  MovableWindows.clue  Notifications.clue  Requests.clue  Timers.clue  gadmin.lua  main.clue
src/GAdminResource/: Autocompletion.txt
src/common/: CMakeLists.txt  common.cpp  network.cpp
src/events/: onBulletSync.clue  onCreate3DText.clue  onDisplayGameText.clue  onInitGame.clue  onPassengerSync.clue  onPlayerChatBubble.clue  onPlayerDeathNotification.clue  onPlayerJoin.clue  onPlayerQuit.clue  onPlayerSync.clue  onReceivePacket.clue  onRemove3DText.clue  onScriptTerminate.clue  onSendChat.clue  onSendCommand.clue  onServerMessage.clue  onSetPlayerName.clue  onShowDialog.clue  onShowMenu.clue  onShowTextDraw.clue  onTextDrawHide.clue  onTextDrawSetString.clue  onTogglePlayerControllable.clue  onVehicleSync.clue  onWindowMessage.clue
src/game/: Admins.clue  Binder.clue  GReport.clue  ServerTables.clue  Spectator.clue  User.clue
src/imgui/: Animations.clue  Assets.clue  HotKey.clue  InputTextFilter.clue  PlayerNotes.clue  Style.clue  StyleChanger.clue  Windows.clue
src/loader/: CMakeLists.txt  loader.cpp
src/plugin/: CMakeLists.txt  common_utils.cpp  configuration.cpp  encoding.cpp  exception_handler.cpp  filesystem.cpp  loader.cpp  log.cpp  memory.cpp  network.cpp  plugin.cpp  string_utils.cpp  version.rc.in
src/plugin/cheats/: airbreak.cpp  clickwarp.cpp  initializer.cpp  tracers.cpp  wallhack.cpp
src/plugin/game/: camera.cpp  cursor.cpp  entity.cpp  game.cpp  pad.cpp  ped.cpp  placeable.cpp  vehicle.cpp  world.cpp
src/plugin/gui/: animation.cpp  fonts.cpp  gui.cpp  hotkey.cpp  key_names.cpp  notify.cpp  style.cpp  utils.cpp
src/plugin/gui/base/: window.cpp
src/plugin/gui/widgets/: aligner.cpp  button.cpp  frame_switcher.cpp  hint.cpp  joystick.cpp  keycap.cpp  markdown.cpp  menu_selector.cpp  search.cpp  text.cpp  text_button.cpp  toggle_button.cpp
src/plugin/gui/windows/: admins.cpp  autocompletion.cpp  command_requester.cpp  counters.cpp  far_chat.cpp  interaction_area.cpp  kill_list.cpp  main.cpp  notes.cpp  notify.cpp  player_checker.cpp  players_nearby.cpp  release_information.cpp  report.cpp  spectator_actions.cpp  spectator_information.cpp  spectator_keys.cpp  vehicle_selection.cpp
src/plugin/gui/windows/main/: initializer.cpp
src/plugin/gui/windows/main/base/: frame.cpp
src/plugin/gui/windows/main/custom_settings/: double_line_input.cpp  message_recolorer.cpp  report.cpp  short_commands.cpp  spectator_actions.cpp  spectator_information.cpp
src/plugin/gui/windows/main/frames/: binder.cpp  home.cpp  key_binds.cpp  logs.cpp  notes.cpp  player_checker.cpp  plugin_information.cpp  presets.cpp  server_information.cpp  settings.cpp  statistics.cpp  windows_customization.cpp
src/plugin/gui/windows/main/widgets/: binder_variables_popup.cpp  frame_selector.cpp  frame_selector_toggle.cpp  frame_switcher.cpp  plot.cpp  popup.cpp  submenu.cpp
src/plugin/gui/windows/report/: initializer.cpp  network.cpp
src/plugin/gui/windows/report/frames/: current_report.cpp  frame.cpp  gps.cpp  previous_answers.cpp  user_all_answers.cpp
src/plugin/misc/: misc.cpp
src/plugin/misc/base/: feature.cpp
src/plugin/misc/features/: auto_aa_command.cpp  auto_alogin.cpp  auto_alogout.cpp  auto_login.cpp  death_notify_in_chat.cpp  display_id_in_chat.cpp  fish_eye.cpp  fix_input_open.cpp  fixes.cpp  hide_addresses.cpp  information_render.cpp  me_to_id.cpp  mentions.cpp  message_hider.cpp  message_recolorer.cpp  nickname_colors.cpp  report_one_color.cpp  short_commands.cpp  statistics.cpp  swap_layout.cpp
src/plugin/samp/: player.cpp  samp.cpp  utils.cpp
src/plugin/samp/core/: 3d_text.cpp  audio.cpp  chat.cpp  dialog.cpp  entity.cpp  game.cpp  input.cpp  kill_list.cpp  menu.cpp  net_game.cpp  ped.cpp  player_death_notification.cpp  player_pool.cpp  remote_player.cpp  server_settings.cpp  synchronization.cpp  text_draw.cpp  user.cpp  vehicle.cpp  vehicle_pool.cpp
src/plugin/samp/events/: 3d_text.cpp  dialog.cpp  event.cpp  player_chat_bubble.cpp  player_death_notification.cpp  send_command.cpp  server_connect.cpp  server_message.cpp  synchronization.cpp  text_draw.cpp
src/plugin/samp/network/: address.cpp  bit_stream.cpp  event_handler.cpp
src/plugin/server/: admins.cpp  binder.cpp  spectator.cpp  user.cpp
src/plugin/server/binder/: variables.cpp
src/plugin/types/: color.cpp  simple.cpp  string_iterator.cpp
src/raknet/: bit_stream.cpp
src/update_handler/: CMakeLists.txt  loader.cpp
themes/: Brown.xml  CatpuccinLatte.xml  CatpuccinMocha.xml  Default.xml  Nord.xml  SolarizedLight.xml  Theme.dtd  Themes.xml  TokyoNight.xml
web-installer/: build.sh
web-installer/src/: main.nsi  utils.nsi
(+211 files in other folders)
